# 2sem_C

./: CMakeLists.txt  README.md
laba1/: CMakeLists.txt  data1.txt  data2.txt  data3.txt  data4.txt  declares.h  getndump.c  results.c
laba2/: treees.c  Отчёт по лабораторной работе №23.docx
laba3/: list.c  stack.c  ЛР24_Дылдин Сергей.docx
laba4/: Makefile  linked_list.h  main.c  oper.c  Отчёт по лабораторной работе №25-26.docx
laba5/: example.txt  laba5.c  new_shit.c  table.txt  лаба9.docx
